removed formulas support
Because it uses "if value is mapping", that is unavailable in CentOS 6.5 Jinja2.
Also, we are not going to use formulas in production environment.

--- a/salt/files/master.d/f_defaults.conf
+++ b/salt/files/master.d/f_defaults.conf
@@ -12,7 +12,7 @@
 #{{ configname }}: {{ default_value }}
 {%- endif -%}
 {%- endmacro -%}
-{%- from 'salt/formulas.jinja' import file_roots, formulas with context -%}
+{%- from 'salt/formulas.jinja' import file_roots with context -%}
 ##### Primary configuration settings #####
 ##########################################
 # This configuration file is used to manage the behavior of the Salt Master
@@ -477,8 +477,6 @@ client_acl_blacklist:
 {{ file_roots(cfg_master['file_roots']) }}
 {%- elif 'file_roots' in cfg_salt -%}
 {{ file_roots(cfg_salt['file_roots']) }}
-{%- elif formulas|length -%}
-{{ file_roots({'base': ['/srv/salt']}) }}
 {%- else -%}
 #file_roots:
 #  base:
