--- a/salt/files/minion.d/f_defaults.conf
+++ b/salt/files/minion.d/f_defaults.conf
@@ -12,7 +12,7 @@
 #{{ configname }}: {{ default_value }}
 {%- endif -%}
 {%- endmacro -%}
-{%- from 'salt/formulas.jinja' import file_roots, formulas with context -%}
+{%- from 'salt/formulas.jinja' import file_roots with context -%}
 ##### Primary configuration settings #####
 ##########################################
 
@@ -232,8 +232,6 @@ file_client: local
 {{ file_roots(cfg_minion['file_roots']) }}
 {%- elif 'file_roots' in cfg_salt -%}
 {{ file_roots(cfg_salt['file_roots']) }}
-{%- elif formulas|length -%}
-{{ file_roots({'base': ['/srv/salt']}) }}
 {%- endif %}
 
 # limit fileserver traversal
